refactor test : 이름과 DateTime 정보를 파싱하는 로직과 LocalDateTime 객체 반환 로직 분리